--- a/gb/19/11/29/n11689935.md
+++ b/gb/19/11/29/n11689935.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bvcufi319/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bvcufi319/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bvcufi319/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bvcufi319/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bvcufi319/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bvcufi319/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bvcufi319/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bvcufi319/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>感恩节突访阿富汗 川普宣布恢复塔利班和谈</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/000_1MN98M-600x400.jpg" />
 <h6>2019年11月28日，川普（特朗普）突访阿富汗，在美军事基地与阿富汗总统阿什拉夫·加尼（Ashraf Ghani）会谈。（Olivier Douliery / AFP）
 </h6>
 <hr>
-	<p>【大纪元2019年11月29日讯】（大纪元记者李言编译报导）美国总统唐纳德·<ahref="https://github.com/bvcufi319/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（<ahref="https://github.com/bvcufi319/djy/blob/master/gb/tag/%E7%89%B9%E6%9C%97%E6%99%AE.md#1">特朗普</a>）于周四（11月28日）的<ahref="https://github.com/bvcufi319/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9%E8%8A%82.md#1">感恩节</a>期间突访<ahref="https://github.com/bvcufi319/djy/blob/master/gb/tag/%E9%98%BF%E5%AF%8C%E6%B1%97.md#1">阿富汗</a>。在与阿富汗总统会谈期间，他宣布，将重启与塔利班的和谈。</p>
-<p>周四，正当美国人欢度<ahref="https://github.com/bvcufi319/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9%E8%8A%82.md#1">感恩节</a>之时，<ahref="https://github.com/bvcufi319/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>出人意料地出现在<ahref="https://github.com/bvcufi319/djy/blob/master/gb/tag/%E9%98%BF%E5%AF%8C%E6%B1%97.md#1">阿富汗</a>的巴格拉姆机场（Bagram Airfield），给了驻扎在那里的美军一个令人惊喜的节日礼物。这是他自成为美国第45任总统以来首次对该国进行访问。</p>
+	<p>【大纪元2019年11月29日讯】（大纪元记者李言编译报导）美国总统唐纳德·<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%89%B9%E6%9C%97%E6%99%AE.md#1">特朗普</a>）于周四（11月28日）的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9%E8%8A%82.md#1">感恩节</a>期间突访<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%BF%E5%AF%8C%E6%B1%97.md#1">阿富汗</a>。在与阿富汗总统会谈期间，他宣布，将重启与塔利班的和谈。</p>
+<p>周四，正当美国人欢度<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9%E8%8A%82.md#1">感恩节</a>之时，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>出人意料地出现在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%BF%E5%AF%8C%E6%B1%97.md#1">阿富汗</a>的巴格拉姆机场（Bagram Airfield），给了驻扎在那里的美军一个令人惊喜的节日礼物。这是他自成为美国第45任总统以来首次对该国进行访问。</p>
 <p>据白宫记者团报导，川普在军事基地待了大约二个半小时。他在餐厅里为士兵们上火鸡、拍照，发表简短讲话并会见了阿富汗总统阿什拉夫·加尼（Ashraf Ghani）。</p>
 <p>川普在与加尼的双边会议上宣布重启与塔利班的和平谈判。两位总统坐在军事总部房间的一端，身后交替树立着四面美国和阿富汗国旗。</p>
 <p>川普对记者说，“塔利班想达成协议，我们将看看他们是否会达成协议。如果达成就达成了，如果没达成那就没达成，没有关系。”</p>
 <p>总统重申，希望将驻阿富汗美军人数减少到8,600人，他在8月份宣布大规模撤军时引用了这一数字。目前，美国在阿富汗只有不到14,000名士兵。2011年，美军驻阿人数近100,000人。</p>
 <p>与塔利班的和平谈判于9月份叫停。当时该激进组织杀害了一名美国士兵及十多名平民。川普因此取消了与塔利班、加尼和其他阿富汗官员的秘密首脑会议。该会议原定于2001年9月11日恐怖袭击18周年前两天在戴维营（Camp David）举行。</p>
 <p>周四晚，在伴随着“美国！美国！”欢呼声的演讲中，川普告诉士兵们，他的政府已经在恐怖组织复活的警告声中铲除了伊斯兰国（ISIS）哈里发（首脑）。</p>
-<figure id="attachment_11689988" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/11/000_1MN837.jpg"><img class="wp-image-11689988 size-large" src="https://i.epochtimes.com/assets/uploads/2019/11/000_1MN837-600x386.jpg" alt="" width="600" b="386" /></a><figcaption class="wp-caption-text">2019年11月28日，川普（<ahref="https://github.com/bvcufi319/djy/blob/master/gb/tag/%E7%89%B9%E6%9C%97%E6%99%AE.md#1">特朗普</a>）突访阿富汗，在军事基地为美军讲话。（Olivier Douliery / AFP）</figcaption></figure>
+<figure id="attachment_11689988" aria-describedby="caption-attachment-11689988" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/11/000_1MN837.jpg"><img class="wp-image-11689988 size-large" src="https://i.epochtimes.com/assets/uploads/2019/11/000_1MN837-600x386.jpg" alt="" width="600" b="386" /></a><figcaption id="caption-attachment-11689988" class="wp-caption-text">2019年11月28日，川普<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%89%B9%E6%9C%97%E6%99%AE.md#1">特朗普</a>）突访阿富汗，在军事基地为美军讲话。（Olivier Douliery / AFP）</figcaption></figure>
 <p>在与加尼会面之前，川普在一个用红色、橙色和黄色横幅装饰的饭厅中为大约二十名士兵上了火鸡。</p>
-<figure id="attachment_11689993" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/11/000_1MN81J.jpg"><img class="wp-image-11689993 size-large" src="https://i.epochtimes.com/assets/uploads/2019/11/000_1MN81J-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">2019年11月28日，川普（特朗普）突访阿富汗，在军事基地为美军上火鸡。（Olivier Douliery / AFP）</figcaption></figure>
+<figure id="attachment_11689993" aria-describedby="caption-attachment-11689993" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/11/000_1MN81J.jpg"><img class="wp-image-11689993 size-large" src="https://i.epochtimes.com/assets/uploads/2019/11/000_1MN81J-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11689993" class="wp-caption-text">2019年11月28日，川普（特朗普）突访阿富汗，在军事基地为美军上火鸡。（Olivier Douliery / AFP）</figcaption></figure>
 <p>川普加入到大厅服务人员桌的时候告诉士兵们说，“我待会儿再跟你们说话，现在我想吃吃火鸡。”当晚有500名士兵在这里共享感恩节大餐。川普坐下来吃了一盘火鸡、土豆泥和玉米面包。</p>
 <p>白宫发言人史蒂芬妮·格里舍姆（Stephanie Grisham）表示，这次访问计划了几个月。他说，“这是一个危险的地区，他（川普）想向部队提供支持。”“他和第一夫人意识到，节日期间有很多人与家人天各一方。我们认为这是一个惊喜。”</p>
 <p>川普最初飞往他在佛罗里达州的海湖庄园（Mar-a-Lago）度假胜地过感恩节。周三晚上他从一个未公开的机场离开，然后降落在联合安德鲁斯基地（Joint Andrews Base），在那里他登上了“空军一号”。而第一夫人梅拉尼娅·川普留在了佛罗里达。#</p>
@@ -26,42 +26,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/19/11/28/n11686529.md#1">感恩节 美国各界大法弟子谢师恩</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/19/11/28/n11687629.md#1">感恩节 美议员感谢美军 感恩美国的自由</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/19/11/28/n11687705.md#1">祝贺感恩节 川普：神是一切美好的赐予之源</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/16/n12408353.md#1">【有冇搞错】世界火药桶拆引信</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/28/n11686529.md#1">感恩节 美国各界大法弟子谢师恩</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/28/n11687629.md#1">感恩节 美议员感谢美军 感恩美国的自由</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/28/n11687705.md#1">祝贺感恩节 川普：神是一切美好的赐予之源</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/18/n10313172.md#1" target="_blank">孙陇：文革中张国柱一家的自杀</a></li><li><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/bvcufi319/djy/blob/master/gb/12/12/28/n3763495.md#1" target="_blank">洪愿：告诉你真实的法轮功（一）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/28/n11616929.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank">中共侵犯宗教自由 美国宣布将持续追责</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/8/n12388668.md#1">乱世佳人的守护天使</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/8/10/n12319003.md#1">【命理】身居高位却在晚年被斩首的命</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/6/28/n12217817.md#1">袭人，即是人生本身</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/8/30/n12367994.md#1">古今六大预言 2020年前后的大交集(上)</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/12/n12397963.md#1">【大时代华人】一根“牙签”背后的爱情</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/15/n12406209.md#1">【新闻第一现场】美驻华大使离任 北京竟不知情</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/16/n12406699.md#1">【拍案惊奇】TikTok能复活？推特封杀闫丽梦</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/15/n12405725.md#1">【珍言真语】刘锐绍：中共不计后果摧毁香港</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12403222.md#1">战狼变色狼？刘晓明和华春莹相继出丑</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/13/n12401217.md#1">赵立坚再次被曝关注色情账号惹议</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12403539.md#1">欧中在峰会上交锋 欧盟步步紧逼习近平</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/16/n12406999.md#1">黄鸿升惊传猝死 享年36岁 经纪人证实</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/13/n12400838.md#1">与成龙有关？吴绮莉自曝女儿有已故兄弟姐妹</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/13/n12401048.md#1">为同父异母妹妹加油 孙俪获邓超妇唱夫和</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/13/n12401224.md#1">杨颖和黄晓明穿情侣装 补税风波后首度放闪</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12403678.md#1">杨超越回应演技争议 大陆演艺圈鄙视链曝光</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12402358.md#1">抬升90度？ 中共官媒秀模型飞机画面遭取笑</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/11/n12397178.md#1">吃素也得大肠癌？避2大致癌雷区 6招正确吃素</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12401895.md#1">《时代》黑边封面悼20万病故者 赞台湾防疫</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12402050.md#1">南极“末日冰川”融化速度惊人 原因被找到</a></li>
-<li><a href="https://github.com/bvcufi319/djy/blob/master/gb/20/9/14/n12402112.md#1">英国女童写信给在天堂的小猫 意外收到回信</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bvcufi319/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bvcufi319/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/29/n11689935.htm">感恩节突访阿富汗 川普宣布恢复塔利班和谈</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/29/n11689935.htm">感恩节突访阿富汗 川普宣布恢复塔利班和谈</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bvcufi319/djy/blob/master/gb/19/11/29/n11689935.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bvcufi319/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bvcufi319/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bvcufi319/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bvcufi319/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvcufi319/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/11/29/n11689935.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
